Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P1: Critical
-
Resolution: Done
-
Affects Version/s: 5.14.1, 5.15.0 Alpha
-
Fix Version/s: 5.14.2, 5.15.0 Alpha
-
Component/s: Widgets: GraphicsView
-
Labels:
-
Platform/s:
-
Commits:c7f59cad196dae2ee83e2073e546428695f0e1f0 (qt/qtbase/5.14)
Description
Install 5.15.0 snapshot (cfa998544d2c80b03dcbc278d2647d91d66d73b9), launch QtCreator and open project widgets/graphicsview/chip. Try to compile, compile fails with:
/Users/qt/RTA/qt5/Examples/Qt-5.15.0/widgets/graphicsview/chip/view.cpp:267:5: error: division by zero in preprocessor expression #if QT_CONFIG(printdialog) ^~~~~~~~~~~~~~~~~~~~~~ In file included from /Users/qt/RTA/qt5/Examples/Qt-5.15.0/widgets/graphicsview/chip/view.cpp:51: In file included from ../chip/view.h:54: In file included from /Users/qt/RTA/qt5/5.15.0/ios/include/QtWidgets/QFrame:1: In file included from /Users/qt/RTA/qt5/5.15.0/ios/include/QtWidgets/qframe.h:43: In file included from /Users/qt/RTA/qt5/5.15.0/ios/include/QtWidgets/qtwidgetsglobal.h:43: In file included from /Users/qt/RTA/qt5/5.15.0/ios/include/QtGui/qtguiglobal.h:43: /Users/qt/RTA/qt5/5.15.0/ios/include/QtCore/qglobal.h:86:30: note: expanded from macro 'QT_CONFIG' #define QT_CONFIG(feature) (1/QT_FEATURE_##feature == 1) ~^~~~~~~~~~~~~~~~~~~~~ 1 error generated.
Full log attached.